# Test

./: AGENTS.md  API.md  ARCHITECTURE.md  CLAUDE.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  docs-check.yml  forge-ci.yml
crafted-coordination/: BUILD_LEDGER.json
crafted-coordination/impl-journal/: PR-001.md  PR-002.md  PR-003.md  PR-004.md  PR-005.md  PR-006.md  PR-007.md
crafted-docs/: TRD-TASKLIB.docx  TRD-TASKLIB.md  forge_architecture_context.md
crafted-standards/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  ENGINEERING_STANDARDS.md  INTERFACES.md  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BRANCH_CONTEXT.md  Validation_CONTEXT.md
docs/tasklib/: API.md  ARCHITECTURE.md  README.md
src/: smoke_check.py
src/tasklib/: __init__.py  __main__.py  cli.py  task.py
src/tasklib/cli/: __init__.py  main.py
src/tasklib/docs/: API.md  ARCHITECTURE.md
src/tasklib/models/: __init__.py  task.py
src/tasklib/storage/: __init__.py  memory.py  store.py
tests/: __init__.py  conftest.py  test_add_placeholder_leaf_modules_task_py_store_py_cli.py  test_add_src_tasklib_package_scaffold_with_empty_init_f.py  test_add_tasklib_package_scaffold.py  test_add_tasklib_python_package_scaffold.py  test_cli.py  test_create_tasklib_package_scaffold_with_subpackage_di.py  test_implement_taskstatus_enumeration_and_task_dataclas.py  test_scaffold.py
tests/models/: __init__.py
tests/storage/: __init__.py  test_memory_store_lifecycle.py
tests/tasklib/: __init__.py
tests/tasklib/cli/: __init__.py
tests/tasklib/models/: test_task.py
tests/tasklib/storage/: test_memory.py
