import sys
import tomllib
from pathlib import Path

import pytest
from packaging.specifiers import SpecifierSet
from packaging.version import Version

# Resolve project root by walking up from this file until we find pyproject.toml
PROJECT_ROOT = next(
    p for p in Path(__file__).resolve().parents if (p / "pyproject.toml").exists()
)

PYPROJECT_PATH = PROJECT_ROOT / "pyproject.toml"


@pytest.fixture(scope="module")
def pyproject_data():
    """Parse pyproject.toml once for all tests."""
    with open(PYPROJECT_PATH, "rb") as f:
        return tomllib.load(f)


# ---------------------------------------------------------------------------
# Basic existence and validity
# ---------------------------------------------------------------------------

class TestPyprojectExists:
    def test_pyproject_toml_exists(self):
        assert PYPROJECT_PATH.exists(), "pyproject.toml must exist at the repository root"
        assert PYPROJECT_PATH.is_file(), "pyproject.toml must be a regular file"

    def test_pyproject_toml_is_valid_toml(self):
        with open(PYPROJECT_PATH, "rb") as f:
            data = tomllib.load(f)
        assert isinstance(data, dict), "Parsed TOML should be a dict"


# ---------------------------------------------------------------------------
# Required sections
# ---------------------------------------------------------------------------

class TestRequiredSections:
    def test_required_sections_present(self, pyproject_data):
        assert "build-system" in pyproject_data, "[build-system] section must be present"
        assert "project" in pyproject_data, "[project] section must be present"


# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------

class TestBuildSystem:
    def test_build_system_requires_setuptools(self, pyproject_data):
        requires = pyproject_data["build-system"]["requires"]
        assert any(
            req.startswith("setuptools") and ">=68.0" in req for req in requires
        ), "build-system.requires must contain setuptools>=68.0"

    def test_build_backend_is_setuptools(self, pyproject_data):
        assert (
            pyproject_data["build-system"]["build-backend"] == "setuptools.build_meta"
        )


# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

class TestProjectMetadata:
    def test_project_name_is_tasklib(self, pyproject_data):
        assert pyproject_data["project"]["name"] == "tasklib"

    def test_project_version_is_0_1_0(self, pyproject_data):
        assert pyproject_data["project"]["version"] == "0.1.0"

    def test_requires_python_gte_3_11(self, pyproject_data):
        assert pyproject_data["project"]["requires-python"] == ">=3.11"

    def test_dependencies_is_empty_list(self, pyproject_data):
        deps = pyproject_data["project"]["dependencies"]
        assert isinstance(deps, list)
        assert deps == []


# ---------------------------------------------------------------------------
# Scripts / entry points
# ---------------------------------------------------------------------------

class TestScripts:
    def test_scripts_entry_point(self, pyproject_data):
        scripts = pyproject_data["project"]["scripts"]
        assert scripts["tasklib"] == "tasklib.cli:main"

    def test_console_script_target_is_exact(self, pyproject_data):
        scripts = pyproject_data["project"]["scripts"]
        assert scripts["tasklib"] == "tasklib.cli:main"
        # No other console scripts should be declared
        assert list(scripts.keys()) == ["tasklib"], (
            "Only the 'tasklib' console script should be declared"
        )


# ---------------------------------------------------------------------------
# Package discovery (src layout)
# ---------------------------------------------------------------------------

class TestPackageDiscovery:
    def test_src_layout_package_discovery(self, pyproject_data):
        where = pyproject_data["tool"]["setuptools"]["packages"]["find"]["where"]
        assert where == ["src"]

    def test_package_discovery_points_to_src(self, pyproject_data):
        where = pyproject_data["tool"]["setuptools"]["packages"]["find"]["where"]
        assert isinstance(where, list)
        assert len(where) == 1, "Package find.where must contain exactly one entry"
        assert where[0] == "src", "Package find.where must point to 'src' only"


# ---------------------------------------------------------------------------
# Negative cases
# ---------------------------------------------------------------------------

class TestNegativeCases:
    def test_no_unexpected_dependencies(self, pyproject_data):
        deps = pyproject_data["project"]["dependencies"]
        assert len(deps) == 0, "dependencies list must have zero items"
        for item in deps:
            pytest.fail(f"Unexpected dependency found: {item}")

    def test_requires_python_does_not_allow_3_10(self, pyproject_data):
        spec_str = pyproject_data["project"]["requires-python"]
        specifier = SpecifierSet(spec_str)
        python_3_10 = Version("3.10.0")
        assert python_3_10 not in specifier, (
            "Python 3.10.0 must NOT satisfy the requires-python specifier"
        )

    def test_requires_python_allows_3_11(self, pyproject_data):
        """Sanity check: 3.11 should be allowed."""
        spec_str = pyproject_data["project"]["requires-python"]
        specifier = SpecifierSet(spec_str)
        assert Version("3.11.0") in specifier

    def test_no_optional_dependencies_section_or_empty_runtime(self, pyproject_data):
        opt_deps = pyproject_data["project"].get("optional-dependencies", {})
        # optional-dependencies may exist for dev tooling, but there should be
        # no section that implies extra runtime dependencies beyond "dev".
        allowed_groups = {"dev", "test", "docs", "lint", "typing"}
        for group_name in opt_deps:
            assert group_name in allowed_groups, (
                f"Unexpected optional-dependency group '{group_name}' -- "
                "only dev-tooling groups are acceptable"
            )


# ---------------------------------------------------------------------------
# Security cases
# ---------------------------------------------------------------------------

class TestSecurityNoDeps:
    def test_no_external_runtime_dependencies(self, pyproject_data):
        """Verify no external runtime dependencies are declared anywhere."""
        # Main dependencies must be empty
        deps = pyproject_data["project"].get("dependencies", [])
        assert deps == [], f"Runtime dependencies must be empty, got: {deps}"

        # Optional dependencies should only contain dev/tooling groups,
        # not groups that users would install for runtime features.
        opt_deps = pyproject_data["project"].get("optional-dependencies", {})
        runtime_group_names = {"all", "full", "runtime", "extra", "core"}
        for group_name, group_deps in opt_deps.items():
            assert group_name not in runtime_group_names, (
                f"Found runtime optional-dependency group '{group_name}' "
                f"with deps {group_deps} -- this violates zero-dependency intent"
            )
